Added Transaction data objects and BudgetController.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/FinanceBuddyAPI/v17
+/FinanceBuddyAPI/FinanceBuddyAPI/bin/Debug/net8.0
+/FinanceBuddyAPI/FinanceBuddyAPI/.vs/FinanceBuddyAPI
