--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /.vs/FinanceBuddyAPI/v17
 /FinanceBuddyAPI/FinanceBuddyAPI/bin/Debug/net8.0
 /FinanceBuddyAPI/FinanceBuddyAPI/.vs/FinanceBuddyAPI
+/FinanceBuddyAPI/FinanceBuddyAPI/obj
