--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@
 ################################################################################
 
 /.vs/FinanceBuddyAPI/v17
-/FinanceBuddyAPI/FinanceBuddyAPI/bin/Debug/net8.0
-/FinanceBuddyAPI/FinanceBuddyAPI/.vs/FinanceBuddyAPI
+/FinanceBuddyAPI/FinanceBuddyAPI/bin/
+/FinanceBuddyAPI/FinanceBuddyAPI/.vs/
 /FinanceBuddyAPI/FinanceBuddyAPI/obj
