Ran code cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /FinanceBuddyAPI/FinanceBuddyAPI/bin/
 /FinanceBuddyAPI/FinanceBuddyAPI/.vs/
 /FinanceBuddyAPI/FinanceBuddyAPI/obj
+/.vs/FinanceBuddyAPI/FileContentIndex
